# claude-status-line

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml  site-ci.yml
.superset/: config.json
docs/adr/: 0001-port-braille-algorithm-to-web.md
docs/superpowers/plans/: 2026-07-11-ccstatus.md  2026-07-12-landing-page.md
docs/superpowers/specs/: 2026-07-11-ccstatus-design.md  2026-07-11-ccstatus-v2-redesign.md  2026-07-12-landing-page-design.md
npm/ccstatus/: README.md  package.json
scripts/: build-npm.sh  gen-logo.py  gen-preview-svg.py  gen-screenshot.py  publish-npm.sh
site/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
site/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
site/components/: Config.tsx  Faq.tsx  Features.tsx  Hero.tsx  Icon.tsx  Install.tsx  TerminalDemo.tsx
site/lib/: braille.test.ts  braille.ts  product.test.ts  product.ts
site/public/: llms.txt
src/: cache.rs  config.rs  input.rs  lib.rs  main.rs  plan.rs  render.rs
tests/: cli.rs
