[package]
name = "ccstatus"
version = "0.6.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "Fast Claude Code status line with cached usage bars"
repository = "https://github.com/morsechimwai/claude-status-line"
readme = "README.md"
keywords = ["claude", "statusline", "cli", "usage"]
categories = ["command-line-utilities"]
exclude = ["site/", "docs/", "scripts/", "npm/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
